--- a/src/App.css
+++ b/src/App.css
@@ -7,15 +7,16 @@ body{
 .App{
   display: flex;
   height: 100vh;
-  padding: 5vw;
+  padding: 2vw;
 
   justify-content: space-between;
 }
 
 .App-header{
   display: flex;
-  justify-content: center;
-  border-radius: 50px;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 20px;
   background: #fff;
   padding-top:5vw;
   flex-basis: calc(30% - 1rem);
@@ -23,6 +24,9 @@ body{
 
 section{
   flex-basis: calc(70% - 1rem);
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
 
 .title{
@@ -38,16 +42,12 @@ section{
   border-radius: 50%;
 }
 
-form{
-  width: 100%;
-  height: 40vh;
-}
 
-form textarea{
+ textarea{
   width: 100%;
-  height: 100%;
+  height: 45%;
   max-height: 100%;
-  min-height: 100%;
+  min-height: 45%;
   max-width: 100%;
   min-width: 100%;
 
@@ -59,6 +59,7 @@ form textarea{
 }
 
 
-form textarea:focus-visible{
+ textarea:focus-visible{
   outline: -webkit-focus-ring-color auto 0px;
 }
+
